# SeleniumTests

./: README.md  pyproject.toml
src/: main.py
src/static/account/: script.js  style.css
src/static/ecommerce/: script.js  style.css
src/static/home/: script.js  styles.css
src/templates/: account.html  ecommerce.html  home.html
tests/account/: main.py
tests/ecommerce/: main.py
